# desktop-pet

./: .gitignore  README.md  index.html  install.ps1  install.sh  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  release.yml
docs/: PRD.md  TUTORIAL.md
e2e/: pet.spec.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ContextMenu.test.tsx  ContextMenu.tsx  ErrorBoundary.tsx  PermissionModal.test.tsx  PermissionModal.tsx  StateIndicator.tsx  StatusNotice.test.tsx  StatusNotice.tsx
src/constants/: pet.constants.ts
src/test/: mocks.ts  setup.ts
src/types/: pet.types.ts
src/utils/: position.test.ts  position.ts
